add any pending changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://omokhele:NLvimhZQB6OuNfFJ@cluster0.mvlie.mongodb.net/polar-meadow-67976?retryWrites=true&w=majority
+.env
